@@ -3,6 +3,8 @@
 *******************************************************************************
 
 === 1.0.12 ===
+* Updated default values for file selectors.
+* Fixed missing output balance knobs in Impulse Reverb Mono plugin.
 * Updated build scripts and dependencies.
 
 === 1.0.11 ===
